# parallel_computing

./: README.md
project1/: Project1-PartA-Results.txt  Project1-PartB-Results.txt  README.md  requirement.md
project1/src/cpu/: CMakeLists.txt  mpi_PartB.cpp  openmp_PartB.cpp  pthread_PartB.cpp  sequential_PartB.cpp  simd_PartB.cpp
project1/src/gpu/: CMakeLists.txt  cuda_PartB.cu  openacc_PartB.cpp
project1/src/scripts/: sbatch_PartA.sh  sbatch_PartB.sh
project2/: Project2-Results.txt  README.md  comparison.py  perf_locality1.data
project2/profiling/: p1_naive_1024.data  p2_locality_1024.data  p3_simd_1024.data  p4_openmp_16threads_1024.data  p4_openmp_1threads_1024.data  p4_openmp_2threads_1024.data  p4_openmp_32threads_1024.data  p4_openmp_4threads_1024.data  p4_openmp_8threads_1024.data  p5_mpi_2tasks_1024.data.old
project2/src/: CMakeLists.txt  locality.cpp  matrix.cpp  mpi.cpp  openmp.cpp  sbatch.sh  simd.cpp
project2/src/gpu/: CMakeLists.txt  cuda.cu  matrix.cpp  openacc.cpp
project3/: Project3-Results.txt  README.md
project3/src/: CMakeLists.txt  sbatch.sh
project3/src/bucketsort/: mpi.cpp
project3/src/odd-even-sort/: mpi.cpp
project3/src/quicksort/: mpi.cpp
project4/: Project4-Results.txt  test.sh
project4/src/: simple_ml_ext.cpp  simple_ml_openacc.cpp
